@@ -1,6 +1,8 @@
 23/06/2022
 -fixed a big bug in predict generator (that occurred under specific conditions only and when the tile overlap was set to non 0). It caused output size width or height to differ from input width/height.
 -I'm thinking of moving to pyqt6 soon (this will fix EPySeg's embedded help/markdown)
+-started adding unittests to make the code and development more robust (this is work in progress and will take a lot of time...)
+-added support for opening image www and/or local url (for tif related images, was already working for other types of images)
 
 15/06/2022
 -added several new methods to the Img class (a full rewrite/reorganization would be useful some day) (e.g. save_as_tiff, one_hot_encoder, auto_scale, fill_holes, clean_blobs_below, ...)
